# otg-server

./: build.sh  config.lua  schema.sql  start.sh
data/: global.lua
data/actions/: actions.xml
data/actions/scripts/other/: potions.lua
data/events/: events.xml
data/events/scripts/: player.lua
data/items/: items.xml
data/lib/: lib.lua
data/lib/core/: core.lua  door.lua  game.lua  imbuements.lua  monster.lua  os_ext.lua  player.lua  position.lua  storages.lua  tables.lua  tile.lua  vocation.lua
data/lib/custom/: dailyreward_lib.lua
data/modules/: modules.xml
data/modules/scripts/gamestore/: gamestore.lua  init.lua
data/monster/: monsters.xml
data/movements/: movements.xml
data/npc/lib/npcsystem/: customModules.lua
data/scripts/: wings.lua
data/scripts/actions/door/: key_door.lua
data/scripts/creaturescripts/custom/: bestiarykill.lua
data/scripts/creaturescripts/others/: player_login_logout_message.lua.lua
data/scripts/events/monster/: default_onDropLoot.lua
data/scripts/events/player/: default_onGainExperience.lua  default_onLook.lua  default_onMoveItem.lua
data/scripts/network/: toggle_mount.lua
database/: schema.sql
engine/: CMakeLists.txt
engine/src/: CMakeLists.txt  account.h  actions.cpp  configmanager.cpp  configmanager.h  const.h  definitions.h  enums.h  events.cpp  events.h  game.cpp  game.h  gamestore.cpp  iologindata.cpp  item.cpp  item.h  items.cpp  items.h  luascript.cpp  luascript.h  monsters.cpp  monsters.h  networkmessage.cpp  networkmessage.h  npc.cpp  otserv.cpp  outputmessage.h  player.cpp  player.h  protocolgame.cpp  protocolgame.h  protocollogin.cpp  rsa.cpp  script.cpp  signals.cpp  tools.cpp  tools.h
engine/vc17/: theforgottenserver.vcxproj
util/: Wings Auras SQL.txt
